# flow.yaml

appId: com.ludwigw.chaincred
---
- launchApp
- tapOn: Connect Wallet
- tapOn: Continue as guest
- tapOn: Sign in/Create account
- assertVisible: No Activity
- tapOn: Discover, tab, 2 of 4
- assertVisible: Discover
- tapOn: Map
- assertVisible: Discover
- tapOn: Grenoble
- tapOn: Settings, tab, 4 of 4
- tapOn: Your Profile 
- assertVisible: Save changes
